hphp/hack/test/typecheck/unused_awaitable14.php.exp
ERROR: File "unused_awaitable14.php", line 9, characters 17-31:
Cannot cast a value of type `Awaitable<string>` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
ERROR: File "unused_awaitable14.php", line 9, characters 25-31:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
  File "unused_awaitable14.php", line 3, characters 21-37:
  This is why I think it is `Awaitable`
WARN: File "unused_awaitable14.php", line 9, characters 17-31:
Casting Awaitable<string> to string: casting a non-primitive type to a primitive rarely yields a useful value. Did you mean to extract a value from this object before casting it, or to do a null-check? (Warn[12005])
